--- a/curd.employee/src/main/resources/templates/index.html
+++ b/curd.employee/src/main/resources/templates/index.html
@@ -14,5 +14,7 @@
 	<a href="deletePage"> Employee Delete Page</a>
 	<br>
 	<a href="searchPage">Employee Search Page</a>
+	<br>
+	<a href="ViewAll"> View All Employee </a>
 </body>
 </html>
